# straico-client

./: Cargo.toml  README.md  straico_api.md
.github/workflows/: build_and_release.yml
endpoints/: image.rs
examples/: basic.rs  completion.rs  file.rs  image.rs  models.rs  models_and_user_requests.rs  user.rs
src/: chat.rs  client.rs  common.rs  endpoints.rs  error.rs  image_data.rs  lib.rs  main.rs  server.rs
src/endpoints/: agent.rs  completion.rs  file.rs  image.rs  mod.rs  model.rs  rag.rs  user.rs
src/endpoints/agent/: agent_details.rs  completion.rs  create.rs  list_agents.rs  rag_to_agent.rs
src/endpoints/completion/: completion_request.rs  completion_response.rs
src/endpoints/rag/: completion.rs  create.rs  list.rs  rag_by_id.rs
tests/: client.rs  openai_compat.rs  test_chat.rs  test_client.rs  test_completion_request.rs  test_completion_response.rs
