[package]
name = "straico"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Straico API"
license = "MIT"

[lib]
name = "straico"
path = "src/lib.rs"

[[bin]]
name = "straico-proxy"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.4", features = ["derive", "env"] }
futures = "0.3.31"
# minijinja = "2.4.0"
reqwest = { version = "0.12.8", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.211", default-features = false, features = ["derive"] }
serde_json = "1.0.132"
url = "2.5.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
